
Bug Fixes: 
Players with team chatspy enabled no longer receive ally messages twice

3.1.5
Features: 
/teama disband to force a team to be disbanded (Note: there is no confirmation for this command)
/teama color to force a team to change their team color

3.1.6

Bug Fixes:
Fixed bug with chat colors not being correctly recognised

3.1.7
Features:
- Added chest claiming
Added commands:
- /team chest claim - Used to claim a given chest (betterteams.chest.claim) 
- /team chest remove - Used to remove a claim from a chest (betterteams.chest.remove)
- /team chest removeall - Used to remove all chest claims from that team (betterteams.chest.removeall)
Added admin commands:
- /teama chest claim <team> - Used to claim a chest for the given team (betterteams.admin.chest.claim)
- /teama chest remove - Used to remove the claim on the chest, regardless of team (betterteams.admin.chest.remove)
- /teama chest removeall <team> - Used to remove all (betterteams.admin.chest.removeall)

3.1.8:
Features: 
- Added new placeholder (%betterteams_teamscoreno_<rank>%) which can be used to display the score of the team at that position in the leaderboard
- Placeholders from placeholder API can now be used in messages.yml
- Added admin commands to enable and disable chest claim for a period of time (/teama chest disableclaims, /teama chest enableclaims)

Bug Fixes: 
- /team neutral double message (https://github.com/booksaw/BetterTeams/issues/32)  
- Fixed multiple typos within messages.yml (https://github.com/booksaw/BetterTeams/issues/31)
- Fixed problem where the placeholder (teamscore) was not working correctly
- Fixed problem with /team top

3.1.12: 
Features:


Improvements:
- Added a character ban list in the config

Bug Fixes: 
- Added a hard ban on the symbol '&' as it caused many problems within the plugin

TODO (any TODO which is not specifically code), mainly used for reminders to update documentation

Headings: 
Features: 


Improvements:


Bug Fixes: 
